<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:contentDescription="Logo do App"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/placeholder_password"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Nome da conta (ex: Facebook)"
        android:inputType="text"
        android:autofillHints="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

    <EditText
        android:id="@+id/et_length"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_length"
        android:inputType="number"
        android:text="@string/default_length"
        android:autofillHints="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <CheckBox
        android:id="@+id/cb_uppercase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_uppercase"
        android:checked="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_length" />

    <CheckBox
        android:id="@+id/cb_lowercase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_lowercase"
        android:checked="true"
        app:layout_constraintStart_toEndOf="@id/cb_uppercase"
        app:layout_constraintTop_toTopOf="@id/cb_uppercase" />

    <CheckBox
        android:id="@+id/cb_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_numbers"
        android:checked="true"
        app:layout_constraintStart_toEndOf="@id/cb_lowercase"
        app:layout_constraintTop_toTopOf="@id/cb_lowercase" />

    <CheckBox
        android:id="@+id/cb_special"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_special_chars"
        android:checked="true"
        app:layout_constraintStart_toEndOf="@id/cb_numbers"
        app:layout_constraintTop_toTopOf="@id/cb_numbers" />

    <Button
        android:id="@+id/btn_generate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_generate"
        app:layout_constraintEnd_toStartOf="@+id/btn_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_uppercase"
        app:layout_constraintHorizontal_weight="1" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Salvar"
        app:layout_constraintBottom_toBottomOf="@+id/btn_generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_generate"
        app:layout_constraintTop_toTopOf="@+id/btn_generate"
        app:layout_constraintHorizontal_weight="1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_passwords"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_generate" />

</androidx.constraintlayout.widget.ConstraintLayout>